Fix paperlist alignment in css.

--- a/css/style.css
+++ b/css/style.css
@@ -1971,4 +1971,5 @@ h4.sch > .sch-sessionchair {
 /* Custom */
 .paperlist li {
   margin-bottom: 1em;
+  list-style-position: outside;
 }
